@@ -2,7 +2,7 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: Performance View Plug-in for NXMC
 Bundle-SymbolicName: org.netxms.ui.eclipse.perfview;singleton:=true
-Bundle-Version: 2.0.7
+Bundle-Version: 2.0.8
 Bundle-Activator: org.netxms.ui.eclipse.perfview.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.eclipse.ui;bundle-version="3.8.2",
@@ -10,9 +10,9 @@ Require-Bundle: org.eclipse.ui;bundle-version="3.8.2",
  org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.10",
  org.netxms.ui.eclipse.console;bundle-version="2.0.10",
  org.netxms.ui.eclipse.charts;bundle-version="2.0.5",
- org.netxms.ui.eclipse.objectview;bundle-version="2.0.3",
- org.netxms.ui.eclipse.datacollection;bundle-version="2.0.4",
- org.netxms.ui.eclipse.usermanager;bundle-version="2.0.4"
+ org.netxms.ui.eclipse.objectview;bundle-version="2.0.7",
+ org.netxms.ui.eclipse.datacollection;bundle-version="2.0.7",
+ org.netxms.ui.eclipse.usermanager;bundle-version="2.0.8"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ActivationPolicy: lazy
 Export-Package: org.netxms.ui.eclipse.perfview.views.helpers,
